--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -6,8 +6,7 @@
              x:Class="AppFVC.Views.RegisterPage"
              BackgroundColor="#6FCF97">
 
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-        <Frame CornerRadius="5" VerticalOptions="Center" Margin="40,55,40,0">
+        <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,55,40,0">
             <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="10" Padding="10,10,0,10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30" />
@@ -24,23 +23,23 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Cadastro" VerticalOptions="Start" FontSize="Large" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"></Label>
-                <Frame Grid.Row="1" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="7" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Nome" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#C4C4C4"/>
+                <Frame Grid.Row="1" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
+                    <local:CustomEntry Placeholder="Nome" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
-                <Frame Grid.Row="2" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="7" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Número de telefone" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#C4C4C4"/>
+                <Frame Grid.Row="2" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
+                    <local:CustomEntry Placeholder="Número de telefone" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
-                <Frame Grid.Row="3" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="7" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Sexo" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#C4C4C4"/>
+                <Frame Grid.Row="3" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
+                    <local:CustomEntry Placeholder="Sexo" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
-                <Frame Grid.Row="4" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="7" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Idade" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#C4C4C4"/>
+                <Frame Grid.Row="4" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
+                    <local:CustomEntry Placeholder="Idade" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
-                <Label Grid.Row="5" Grid.ColumnSpan="2" Text="Por que você precisa dos meus dados?" TextDecorations="Underline" FontSize="11.5" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
+                <Label Grid.Row="5" Grid.ColumnSpan="2" Text="Por que você precisa dos meus dados?" FontSize="11.5" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
                 <CheckBox Grid.Row="6" Grid.Column="0" Color="#219653" VerticalOptions="Center" HorizontalOptions="StartAndExpand" ></CheckBox>
-                <Label Grid.Row="6" Grid.Column="1" Text="Li e aceito os termos de uso." VerticalOptions="CenterAndExpand" HorizontalOptions="End"></Label>
+                <Label Grid.Row="6" Grid.Column="1" Text="Li e aceito os termos de uso." TextDecorations="Underline" VerticalOptions="CenterAndExpand" HorizontalOptions="End"></Label>
                 <Button Grid.Row="7" Grid.ColumnSpan="2" CornerRadius="25" TextColor="White" Text="Próximo" BackgroundColor="#219653" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
             </Grid>
         </Frame>
-    </StackLayout>
+
 </ContentPage>
