--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com" xmlns:local="clr-namespace:AppFVC.CustomRenderers"
+             xmlns:prism="http://prismlibrary.com"
+             xmlns:customRenderers="clr-namespace:AppFVC.CustomRenders;assembly=AppFVC"
+             xmlns:customRenders="clr-namespace:AppFVC.CustomRenders;assembly=AppFVC"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="AppFVC.Views.RegisterPage"
              BackgroundColor="#6FCF97">
@@ -24,16 +26,16 @@
                 </Grid.ColumnDefinitions>
                 <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Cadastro" VerticalOptions="Start" FontSize="Large" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"></Label>
                 <Frame Grid.Row="1" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Nome" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
+                    <customRenders:CustomEntry Placeholder="Nome" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
                 <Frame Grid.Row="2" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Número de telefone" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
+                    <customRenders:CustomEntry Placeholder="Número de telefone" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
                 <Frame Grid.Row="3" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Sexo" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
+                    <customRenders:CustomEntry Placeholder="Sexo" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
                 <Frame Grid.Row="4" Grid.ColumnSpan="2" IsClippedToBounds="True" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand">
-                    <local:CustomEntry Placeholder="Idade" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
+                    <customRenders:CustomEntry Placeholder="Idade" Margin="10,0,0,0" HeightRequest="38" FontSize="15" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD"/>
                 </Frame>
                 <Label Grid.Row="5" Grid.ColumnSpan="2" Text="Por que você precisa dos meus dados?" FontSize="11.5" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
                 <CheckBox Grid.Row="6" Grid.Column="0" Color="#219653" VerticalOptions="Center" HorizontalOptions="StartAndExpand" ></CheckBox>
