--- a/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
@@ -5,14 +5,17 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="AppFVC.Views.RegisterInfoPage"
              BackgroundColor="#6FCF97">
-
-    <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,55,40,0" Padding="0">
-        <StackLayout VerticalOptions="Start" Padding="0,0,30,30" BackgroundColor="White">
-            <ImageButton Source="iconExit50px.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start" Margin="0"></ImageButton>
-            <Label Text="Por que você precisa dos meus dados?" FontSize="Medium" VerticalOptions="Start" Padding="25,0,0,0" TextColor="Black"></Label>
-            <Label Padding="25,10,30,0" Text="Precisamos de algumas informações básicas para informar como você deve proceder, no caso de contaminação. "></Label>
-            <Label Padding="25,0,30,0" Text="Também é necessário que você permita acesso à sua localização, para podermos monitorar se você entrou em contato com alguém infectado."></Label>
-            <Label Padding="25,10,30,30" Text="Não se preocupe, não compartilharemos suas informações com ninguém e nem utilizaremos para nenhum outro propósito que não o combate ao Corona virus."></Label>
+    <ScrollView>
+        <StackLayout>
+            <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,30,40,30" Padding="0">
+                <StackLayout VerticalOptions="Start" Padding="0,0,30,30" BackgroundColor="White">
+                    <ImageButton Source="iconExit50px.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start" Margin="0"></ImageButton>
+                    <Label Text="Por que você precisa dos meus dados?" FontSize="20" VerticalOptions="Start" Padding="25,0,0,0" TextColor="#303030"></Label>
+                    <Label Padding="25,10,30,0" TextColor="#737373" FontSize="16" Text="Precisamos de algumas informações básicas para informar como você deve proceder, no caso de contaminação. "></Label>
+                    <Label Padding="25,0,30,0" TextColor="#737373" FontSize="16" Text="Também é necessário que você permita acesso à sua localização, para podermos monitorar se você entrou em contato com alguém infectado."></Label>
+                    <Label Padding="25,10,30,30" TextColor="#737373" FontSize="16" Text="Não se preocupe, não compartilharemos suas informações com ninguém e nem utilizaremos para nenhum outro propósito que não o combate ao Corona virus."></Label>
+                </StackLayout>
+            </Frame>
         </StackLayout>
-    </Frame>
+    </ScrollView>
 </ContentPage>
