--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -23,6 +23,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
 
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -61,9 +62,10 @@
                             </TapGestureRecognizer>
                         </Label.GestureRecognizers>
                     </Label>
-                    <CheckBox Grid.Row="8" Grid.Column="0" Color="#009789" Margin="0,4,0,0" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
-                    <Label Grid.Row="8" Grid.Column="1" Margin="0,10,0,20" Text="Li e aceito os termos de uso." FontSize="14" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="EndAndExpand" ></Label>
-                    <Button Grid.Row="9" Grid.ColumnSpan="2" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo"   VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <CheckBox Grid.Row="8" Grid.Column="0" IsChecked="{Binding CheckTermo}" Color="#009789" Margin="0,5,0,0" VerticalOptions="EndAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
+                    <Label Grid.Row="8" Grid.Column="1" Margin="0,10,0,0" Text="Li e aceito os termos de uso." FontSize="14" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" ></Label>
+                    <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="10,0,0,20" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
+                    <Button Grid.Row="10" Grid.ColumnSpan="2" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo"   VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
         </StackLayout>
